# MsTC-Painter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  run.bat  run_brush_test.bat  run_export_test.bat  run_floodfill_test.bat  run_layers_test.bat  run_project_test.bat  run_raycast_test.bat  run_undo_test.bat  vcpkg.json
src/: MainWindow.cpp  MainWindow.h  Theme.h  main.cpp
src/editor/: BrushEngine.cpp  BrushEngine.h  BrushPanel.cpp  BrushPanel.h  CanvasWidget.cpp  CanvasWidget.h  ChannelColors.h  FloodFill.cpp  FloodFill.h  InfoPanel.cpp  InfoPanel.h  Layer.cpp  Layer.h  LayerPanel.cpp  LayerPanel.h  LayerStack.cpp  LayerStack.h  PixelTarget.h  SdfContour.h  SdfRaster.cpp  SdfRaster.h  TextureDocument.cpp  TextureDocument.h  TextureExport.cpp  TextureExport.h  TextureGroup.cpp  TextureGroup.h  TextureInfo.cpp  TextureInfo.h  UndoHistory.cpp  UndoHistory.h  UvCoverage.cpp  UvCoverage.h  UvLines.cpp  UvLines.h
src/pmx/: PmxParser.cpp  PmxParser.h  PmxTypes.h
src/project/: Project.cpp  Project.h
src/renderer/: Camera.cpp  Camera.h  DX11Widget.cpp  DX11Widget.h  MaskTextureSet.cpp  MaskTextureSet.h  MeshRaycast.cpp  MeshRaycast.h  Shaders.h  StaticMesh.cpp  StaticMesh.h
tests/: test_brush.cpp  test_export.cpp  test_floodfill.cpp  test_layers.cpp  test_project.cpp  test_raycast.cpp  test_undo.cpp
translations/: mstc_zh_CN.ts
